added java-options key for JAVA_TOOL_OPTIONS and JDK_JAVA_OPTIONS, plus PS support notice